fixed font size of sub header on projects to test on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ h6{
 }
 
 .header{
+	font-size:1.5em;
 	text-align:center;
 	margin-top:-1em;
 }
